# multi_localization

./: README.md
child_localization/: CMakeLists.txt  package.xml
child_localization/config/child_ekf/: child_ekf.yaml
child_localization/config/child_mcl/: child_mcl.yaml
child_localization/config/rviz/: child_ekf.rviz  child_mcl.rviz
child_localization/config/tf/: tf.yaml
child_localization/include/child_ekf/: child_ekf.h
child_localization/include/child_mcl/: child_mcl.h  mcl.h
child_localization/include/kalman_filter/: kalman_filter.h
child_localization/include/tf_broadcaster/: tf_broadcaster.h
child_localization/launch/: child_ekf.launch  child_mcl.launch  mcl.launch
child_localization/src/: child_ekf.cpp  child_ekf_node.cpp  child_mcl.cpp  child_mcl_node.cpp  mcl.cpp  mcl_node.cpp  tf_broadcaster.cpp  tf_broadcaster_node.cpp
map_updater/: CMakeLists.txt  package.xml
map_updater/config/rviz/: map_update_checker.rviz  set_marker.rviz
map_updater/include/map_update_checker/: map_update_checker.h
map_updater/include/map_updater/: map_updater.h
map_updater/launch/: map_update_checker.launch  set_marker.launch
map_updater/record/: arrange_1_fig.csv  record_1.csv  record_2.csv  record_3.csv  record_3_fig.csv
map_updater/src/: map_update_checker.cpp  map_updater.cpp  marker_store.cpp
mcl/: CMakeLists.txt  package.xml
mcl/config/mcl/: mcl.yaml
mcl/config/rviz/: mcl.rviz  rviz.rviz
mcl/include/mcl/: mcl.h
mcl/include/tf_broadcaster/: tf_broadcaster.h
mcl/launch/: mcl.launch
mcl/src/: mcl.cpp  mcl_node.cpp  tf_broadcaster.cpp  tf_broadcaster_node.cpp
parent_localization/: CMakeLists.txt  package.xml
parent_localization/config/parent_mcl/: marker_color.yaml  object_list.yaml  object_name.yaml  parent_mcl.yaml
parent_localization/config/rviz/: marker_updater.rviz  set_marker_on_the_map.rviz
parent_localization/include/marker_updater/: marker_updater.h
parent_localization/include/parent_mcl/: parent_mcl.h
parent_localization/include/reposition_marker/: reposition_marker.h
parent_localization/launch/: get_object_name.launch  marker_updater.launch  parent_mcl.launch  reposition_marker.launch  set_marker.launch
parent_localization/record/: arrange_1.csv  record_3.csv
parent_localization/src/: get_object_name.cpp  marker_updater.cpp  parent_mcl.cpp  parent_mcl_node.cpp  reposition_marker.cpp  set_marker.cpp
pose_recorder/: CMakeLists.txt  package.xml
pose_recorder/record/: record_1.csv  record_2.csv  record_3.csv  record_4.csv  record_5.csv  record_6.csv  record_7.csv
pose_recorder/scripts/: pose_recorder.py
pose_recorder/src/: pose_recorder.cpp
